--- a/socket.html
+++ b/socket.html
@@ -19,7 +19,7 @@
 			ws.onopen =function(){ ws.send("Message to send");};
 			ws.onmessage = function(evt){
 				var received_msg =evt.data;
-				messageContainer.innerHTML = messageContainer.innerHTML +"<br />Message is received :"+reveived_msg;
+				messageContainer.innerHTML = messageContainer.innerHTML +"<br />Message is received :"+received_msg;
 			};
 			ws.onclose = function (){
 				messageContainer.innerHTML = messageContainer.innerHTML +"<br />Connection is closed ...";
